--- a/src/Story/index.css
+++ b/src/Story/index.css
@@ -46,3 +46,112 @@ a {
 }
 
 * { -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+
+.progress-bar {
+    width: 100%;
+    height: 5px;
+    background-color: gray;
+    position: absolute;
+    top: 0px;
+    border-radius: 6px;
+    z-index: 1000;
+}
+
+.progress-bar::before {
+    height: 3px;
+    content: '';
+    background-color: blue;
+    width: 50%;
+}
+
+.progress-span {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    background-color: white;
+    height: 4px;
+    width: 100%;
+}
+
+.animate {
+    transition: transform 1.25s linear;
+}
+
+.rotatePlayer {
+    transform: rotateY(180deg);
+    transition: transform 2s ease;
+}
+
+.icon-action {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+}
+.rewind {
+    transform: rotateY(180deg);
+}
+.actions {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    z-index: 100000;
+}
+.action-rewind {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    display: none;
+}
+
+.action-forward {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 50%;
+    right: 25%;
+    display: none;
+}
+
+.forward-a {
+    animation: fadeInRight 0.5s;
+    animation-timing-function: ease-in-out;
+    display: block;
+}
+
+.rewind-a {
+    animation: fadeInLeft 0.5s;
+    animation-timing-function: ease-in-out;
+    display: block;
+}
+
+@keyframes fadeInRight {
+    0% {
+       opacity: 0 !important;
+       transform: translateX(0px);
+    }
+    50% {
+        opacity: 1 !important;
+        transform: translateX(10px);
+    }
+    100% {
+        opacity: 0 !important;
+        transform: translateX(20px);
+    }
+ }
+
+ @keyframes fadeInLeft {
+    0% {
+       opacity: 0 !important;
+       transform: translateX(0px);
+    }
+    50% {
+        opacity: 1 !important;
+        transform: translateX(-10px);
+    }
+    100% {
+        opacity: 0 !important;
+        transform: translateX(-20px);
+    }
+ }
